--- a/src/app/soundboard-display/soundboard-display.component.html
+++ b/src/app/soundboard-display/soundboard-display.component.html
@@ -1,8 +1,8 @@
-<div *ngIf="sounds$ | async as sounds else notFound">
+<div *ngIf="sounds$ | async as sounds else loading">
   <div *ngIf="sounds.length > 0 else notFound">
     <p class="lead mb-2 mt-2">Click a button to hear its sound!</p>
 
-    <p><button type="button" class="secondary btn-lg btn" (click)="stopAllAudio()">Stop all audio!</button></p>
+    <p><button type="button" class="btn-danger btn-lg btn" (click)="stopAllAudio()">Stop all audio!</button></p>
 
     <div class="row align-items-start">
       <div class="col-4" *ngFor="let sound of sounds">
@@ -10,7 +10,10 @@
           <div class="card-body">
             <h5 class="card-title">{{ sound.title }}</h5>
             <p *ngIf="sound.text" class="card-text">{{ sound.text }}</p>
-            <a (click)="playSound(sound)" class="btn btn-primary">Play {{ sound.title }}</a>
+            <p *ngIf="sound.length"><small>{{ sound.length }}</small></p>
+            <p><a (click)="playSound(sound)" class="btn btn-primary">Play {{ sound.title }}</a></p>
+
+            <p><a *ngIf="isPlaying(sound)" (click)="fadeOut(sound)" class="btn btn-secondary">Fade out</a></p>
           </div>
         </div>
       </div>
@@ -18,8 +21,13 @@
   </div>
 </div>
 
+<ng-template #loading>
+  Loading...
+</ng-template>
+
 <ng-template #notFound>
-  <h2>No sounds available</h2>
+  <h2 class="mb-2">No sounds available</h2>
+
   <p>Sorry, no sounds available right now.</p>
 
   <p><a [routerLink]="[ '/config' ]">Configure soundboard</a></p>
