Add re-order ability to the soundboard screen

--- a/src/app/config/add-edit-form/add-edit-form.component.html
+++ b/src/app/config/add-edit-form/add-edit-form.component.html
@@ -18,7 +18,7 @@
                name="soundFile"
                aria-describedby="soundFileHelp" 
                placeholder="Upload a sound file"
-               accept="audio/mp4, audio/mpeg, audio/basic, audio/mid, audio/x-mpegurl"
+               accept="audio/mpeg"
                (change)="handleFileInput($event.target.files)">
         <small id="soundFileHelp" class="form-text text-muted">Sound file to upload</small>
       </div>
